-:console; fix:cursor,filter,null timel style; + member to timel jump

--- a/site/activity-react/pages/container/timeline/style.scss
+++ b/site/activity-react/pages/container/timeline/style.scss
@@ -1,18 +1,38 @@
 .news-page {
     padding: 30px 0;
 
-    .news-filter {
-        margin-bottom: 30px;
-        margin-left: 30px;
-        font-weight: bold;
-        font-size: 20px;
+    .title-bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        height: 80px;
+        display: flex;
+        padding: 0 50px;
+
+        .filter-title {
+            cursor: default;
+            margin-bottom: 30px;
+            margin-left: 30px;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .team-filter {
+            cursor: pointer;
+            margin-bottom: 30px;
+            margin-left: 30px;
+            font-size: 18px;
+        }
     }
+    
+
 
 
     .team-list {
         position: absolute;
         z-index: 10;
-        top: 100px;
+        top: 60px;
         left: 30px;
         background-color: #fff;
         width: 400px;
@@ -181,5 +201,14 @@
             width: 200px;
             text-align: center;
         }
+    }
+
+    .null-info{
+        text-align: center;
+        margin-bottom: 30px;
+        margin-left: 30px;
+        font-weight: bold;
+        font-size: 20px;
+
     }
 }
